appId: com.sec.android.app.popupcalculator
---
- launchApp:
    clearState: true
- tapOn: "6"
- tapOn: "×"
- tapOn: "7"
- tapOn: "="
- assertVisible: "42"
