appId: com.sec.android.app.popupcalculator
---
- launchApp:
    clearState: true
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_05"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_clear"
- assertNotVisible:
    id: "com.sec.android.app.popupcalculator:id/calc_edt_formula"
    text: "5.*"
