appId: com.sec.android.app.popupcalculator
---
- launchApp:
    clearState: true
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_02"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_00"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_div"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_04"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_equal"
- assertVisible:
    id: "com.sec.android.app.popupcalculator:id/calc_edt_formula"
    text: "5.*"
