appId: com.sec.android.app.popupcalculator
---
- launchApp:
    clearState: true
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_09"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_sub"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_03"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_equal"
- assertVisible:
    id: "com.sec.android.app.popupcalculator:id/calc_edt_formula"
    text: "6.*"
