appId: com.sec.android.app.popupcalculator
---
- launchApp:
    clearState: true
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_02"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_add"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_02"
- tapOn:
    id: "com.sec.android.app.popupcalculator:id/calc_keypad_btn_equal"
- assertVisible:
    id: "com.sec.android.app.popupcalculator:id/calc_edt_formula"
    text: "4.*"
